# MiniProjects

./: .gitmodules
p1/: CMakeLists.txt  readme.md
p1/src/: main.cpp
p2/: CMakeLists.txt  readme.md
p2/src/: main.cpp
p3/: CMakeLists.txt  readme.md
p3/src/: main.cpp
